# rust-ic-token

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/ic-token/: Cargo.toml
src/ic-token/src/: main.rs
src/ic_token_assets/src/: index.html  index.js
